force-app/main/default/objects/PlatformEvent_Switch__mdt/PlatformEvent_Switch__mdt.object-meta.xml
<CustomObject>
    <description>Controls whether a specific Platform Event is allowed to be published.
Each record represents one Platform Event and acts as a kill-switch.
When disabled, publishing of the corresponding Platform Event is skipped, allowing safe, configuration-based control during incidents, maintenance, or testing—without changing code.</description>
    <label>PlatformEvent Switch</label>
    <pluralLabel>PlatformEvent Switches</pluralLabel>
</CustomObject>