force-app/main/default/objects/PlatformEvent_Switch__mdt/fields/Disable_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disable_Reason__c</fullName>
    <inlineHelpText>Provide reason for disabling PE</inlineHelpText>
    <label>Disable Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>