force-app/main/default/objects/PlatformEvent_Switch__mdt/fields/Disabled_Until__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Until__c</fullName>
    <inlineHelpText>Used for temporary off</inlineHelpText>
    <label>Disabled Until</label>
    <type>DateTime</type>
</CustomField>