force-app/main/default/objects/PlatformEvent_Switch__mdt/fields/isDisabled__c.field-meta.xml
<CustomField>
    <fullName>isDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for permanent/hard Off</inlineHelpText>
    <label>isDisabled</label>
    <type>Checkbox</type>
</CustomField>