force-app/main/default/objects/PlatformEvent_Switch__mdt/fields/PlatformEventApiName__c.field-meta.xml
<CustomField>
    <fullName>PlatformEventApiName__c</fullName>
    <inlineHelpText>Provide API Name of Platform event</inlineHelpText>
    <label>Platform Event Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>